src/test/resources/annotator/badElementInSandbox.twig
{% sandbox %}
    {% include 'foo' %}
    <error descr="A sandbox tag may only contain includes.">{% set foo = "bar" %}</error>
{% endsandbox %}